@@ -2,8 +2,8 @@ Package: spaMM
 Type: Package
 Title: Mixed-Effect Models, Particularly Spatial Models
 Encoding: UTF-8
-Version: 2.6.0
-Date: 2019-01-09
+Version: 2.6.1
+Date: 2019-01-13
 Authors@R: c(person("François", "Rousset", role = c("aut", "cre", "cph"),
                      email = "francois.rousset@umontpellier.fr",
                      comment = c(ORCID = "0000-0003-4670-0371")),
@@ -27,11 +27,11 @@ URL: https://www.r-project.org,
         http://kimura.univ-montp2.fr/~rousset/spaMM.htm
 RoxygenNote: 6.0.1
 ByteCompile: true
-Packaged: 2019-01-10 14:00:06 UTC; Francois.rousset
+Packaged: 2019-01-13 23:21:42 UTC; Francois.rousset
 Author: François Rousset [aut, cre, cph]
     (<https://orcid.org/0000-0003-4670-0371>),
   Jean-Baptiste Ferdy [aut, cph],
   Alexandre Courtiol [aut] (<https://orcid.org/0000-0003-0637-2959>),
   GSL authors [ctb] (src/gsl_bessel.*)
 Repository: CRAN
-Date/Publication: 2019-01-10 14:40:03 UTC
+Date/Publication: 2019-01-14 08:40:03 UTC
